# cool-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  devbox.json  shell.nix
.github/workflows/: build_linux.yml  build_webassembly.yml  build_windows.yml
projects/VS2022/game/: game.vcxproj  raylib_game.vcxproj
projects/VS2022/raylib_game/: raylib_game.vcxproj
src/: Makefile
src/main/: draw_game.cpp  draw_game.cpp.cpp  draw_main_menu.cpp  draw_pause.cpp  game.cpp  game_3d_example.cpp  gamejam_template.cpp  main.cpp  menus.cpp  music_example.cpp  paralax_bg_example.cpp  python_vc_cpp.cpp
src/main/include/: game.hpp  game_3d_example.hpp  gamejam_template.hpp  music_example.hpp  paralax_bg_example.hpp  python_vc_cpp.hpp  window_codes.hpp
src/resources/: vignette.fs
src/resources/fonts/my-old-remington/: 1001fonts-my-old-remington-eula.txt
src/resources/fonts/x-typewriter/: License.txt
src/sources_of_resources/: books.kra  buttons.kra  cursor.kra  cursor_with_a_knife.kra  face.kra  game_interface.kra  guy.kra  inadequate.xrns  knife.kra  objects.kra  objects2.kra
